fix: Fixed the layout of the results grid ->
- Since the rows in this grid were fixed, when an user added to much
items in the todolist, it didn't fit the div, so I changed the rows to
'min-content', so it can adjust to the content;

- But with that adjustment, the image was getting bigger and bigger, so
I set a max-height to 430px;

- In the app.js I removed the limitation of 5 items in the todolist.

--- a/src/client/styles/components.scss
+++ b/src/client/styles/components.scss
@@ -70,7 +70,7 @@ img {
   padding: 0 10px;
   border-radius: 15%;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 430px;
   @include for-phone-only {
     width: 90%;
   }
@@ -108,7 +108,7 @@ img {
         text-decoration: line-through;
         /* Add a "checked" mark when clicked on */
         &::before {
-          content: "";
+          content: '';
           position: absolute;
           border-color: #fff;
           border-style: solid;
